# TheRustyRoad

./: .gitignore
02_guessing_game/src/: main.rs
03_common_programming_concepts/01_variables_and_mutability/src/: main.rs
03_common_programming_concepts/02_data_types/src/: main.rs
03_common_programming_concepts/03_functions/src/: main.rs
03_common_programming_concepts/05_control_flow/src/: main.rs
04_ownership/01_intro/src/: main.rs
04_ownership/02_references/src/: main.rs
04_ownership/03_slices/src/: main.rs
05_structs/01_construct/: Cargo.toml
05_structs/01_construct/src/: main.rs
05_structs/02-03_rectangle/src/: main.rs
06_enums/01_enums/src/: main.rs
06_enums/02_match_flow/: Cargo.toml
06_enums/02_match_flow/src/: main.rs
06_enums/03_iflet/src/: main.rs
07_managing_projects/01_pack_and_crates/: Cargo.toml
07_managing_projects/02-05_modules/src/: lib.rs
09_error_handling/01-02_panic/: Cargo.toml
09_error_handling/03_when_to_panic/: Cargo.toml
11_testing/01-02-03_howto/: Cargo.toml
12_managing_projects/src/: lib.rs
14_more_cargo_and_crates/01-02_build_and_publish/: Cargo.toml
14_more_cargo_and_crates/01-02_build_and_publish/src/: lib.rs  main.rs
14_more_cargo_and_crates/03_workspaces/: Cargo.toml
15_smart_pointers/06_ref_cycles/: Cargo.toml
17_oop_features/01_oop_characteristics/: Cargo.toml
17_oop_features/02_gui_with_traits/: Cargo.toml
19_advanced_features/01_advanced_functions/: Cargo.toml
19_advanced_features/03_advanced_types/: Cargo.toml
20_build_a_server/src/: lib.rs  main.rs
(+29 files in other folders)
