workspace = { members = [ "03_workspaces","14_more_cargo_and_crates/03_workspaces"] }
[package]
name = "my_crate"
version = "0.1.0"
edition = "2021"
description = "Useless crate for study purposes"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]


